Семинар №3. Выделены логические блоки, выполнено позиционирование

--- a/workshop2/catalog/catalog.html
+++ b/workshop2/catalog/catalog.html
@@ -8,15 +8,14 @@
   </head>
   <body>
     <nav>
-      <a class="menu" href="../index.html">Главная</a>
+                  <a class="menu" href="../index.html">Главная</a>
       <a class="menu" href="#">Каталог</a>
       <a class="menu" href="#">Контакты</a>
     </nav>
-    <h1 class="h1_edit">Каталог</h1>
+      <h1 class="h1_edit">Каталог</h1>
     <p class="p_edit">
-      Далеко-далеко за словесными горами в стране гласных и согласных живут
-      рыбные тексты.
-      <br />
+                  <div>Далеко-далеко за словесными горами в стране гласных и согласных живут
+      рыбные тексты.</div>
       Назад гор необходимыми домах, парадигматическая собрал текста грамматики
       переулка буквенных великий осталось оксмокс эта взгляд лучше,
       <br />
@@ -28,7 +27,7 @@
       образ эта там меня, вдали языкового имеет безопасную безорфографичный
       родного?
       <br />
-      Которой даже всеми предупреждал. Взгляд маленькая пояс свой осталось
+             даже всеми предупреждал. Взгляд маленькая пояс свой осталось
       семантика по всей рот его курсивных напоивший!
       <br />
       Вершину но силуэт семь имеет выйти эта! Напоивший сих первую, грамматики
