Домашнее задание к семинару №6

--- a/workshop5/index.html
+++ b/workshop5/index.html
@@ -17,7 +17,7 @@
         </p>
         <button>Read More...</button>
       </article>
-      <article class="item--shadow">
+      <article class="features__shadow">
         <div class="features__item2">
           <img src="img/icon-feature2.svg" alt="icon" />
           <h3>Get Quality Ieads</h3>
@@ -59,15 +59,17 @@
             <button>Learn More</button>
           </div>
         </article>
-        <article class="services__item">
-          <img src="img/image-service2.png" alt="icon" />
-          <h3>Seo Optimazadion</h3>
-          <p>
-            Business applications through revolutionary catalysts for chang the
-            Seamlessly underwhelm dures.
-          </p>
-          <div class="services__buttom">
-            <button>Learn More</button>
+        <article class="services__shadow">
+          <div class="services__item">
+            <img src="img/image-service2.png" alt="icon" />
+            <h3>Seo Optimazadion</h3>
+            <p>
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </p>
+            <div class="services__buttom">
+              <button>Learn More</button>
+            </div>
           </div>
         </article>
         <article class="services__item">
