--- a/workshop9/index.html
+++ b/workshop9/index.html
@@ -54,6 +54,7 @@
         </div>
         <div class="header__menu-burger">
           <svg
+            class="menu__hiden"
             xmlns="http://www.w3.org/2000/svg"
             width="32"
             height="30"
